# evaai

./: .env.example  Cargo.toml  LICENSE  README.md
src/: main.rs
src/handlers/: gemini.rs
src/utils/: requests.rs
