[package]
name = "evaai"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.12.11", features = ["json"] }
teloxide = "0.13.0"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rand = "0.8.5"
